--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@ body {
 
     border: 1px solid red;
     width: 100%;
-    height: 100%;
+    height: auto;
 
     display: flex;
     flex-direction: row;
