--- a/css/contact.css
+++ b/css/contact.css
@@ -28,7 +28,7 @@
     width: 100%;
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, 400px);
+    grid-template-columns: repeat(auto-fit, auto);
     grid-template-rows: repeat(auto-fit, auto);
 
     justify-content: center;
@@ -45,7 +45,7 @@
 
 .contact-grid .contact-form {
 
-    width: 400px;
+    width: 350px;
 }
 
 .contact form {
@@ -90,7 +90,7 @@
 
 .contact .availability {
 
-    width: 400px;
+    width: 300px;
     height: auto;
 
     display: flex;
@@ -143,10 +143,16 @@
         width: auto;
     }
 
-    .availability {
+    .contact-grid .contact-form {
 
-        width: 10px;
+        width: 250px;
     }
+
+    .contact-grid .availability {
+
+        width: 250px;
+    }
+
     
     .contact #status-header {
     
@@ -162,9 +168,14 @@
 
     .text-field {
 
-        width: 80%;
+        width: 100%;
         justify-content: center;
         align-items: center;
+    }
+
+    .text-area {
+
+        min-height: 200px;
     }
 
     .contact-form {
@@ -219,6 +230,16 @@
         width: 60%;
         
     }
+
+    .contact-grid .contact-form {
+
+        width: 350px;
+    }
+
+    .contact-grid .availability {
+
+        width: 350px;
+    }
     
     .contact #status-header {
             
@@ -248,6 +269,12 @@
 
         width: 100%;
         height: 40px;
+    }
+
+    .text-area {
+
+        width: 100%;
+        min-height: 250px;
     }
 }
 
